<resources>
    <string name="app_name">Lab3Task</string>
    <string name="email">Email:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="sign_up">SIGN UP</string>
    <string name="date_of_birth">Date Of Birth:</string>
    <string name="name">Name</string>
    <string name="gender">Gender:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
</resources>
